Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<p>MONICA</p>
+<!DOCTYPE HTML>
+<html>
+<body>
+
+<header>
+    <h1>My name is Mon...</h1>
+    <h1><font color="green">and here's where I've been</font></h1>
+</header>
+
+<main>
+    <article>
+        <h2>Chicago, IL</h2>
+        <p>I've visited the windy city countless times! It's very close to where I live.</p>
+        <figure>
+            <img src="images/chicagobean.jpg" alt="chicagobean">
+            <figcaption>The famous Cloud Gate, aka the Chicago "Bean"</figcaption>
+        </figure>
+    </article>
+</main>
+
+    <footer>
+			<p>Contact me at <a href=" monicajeonglee@gmail.com">monicajeonglee@gmail.com</a> </p>
+
+    </footer>
+
+</body>
+</html>
