--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <body>
-
+<head>
 <header>
-    <h1>My name is Mon...</h1>
-    <h1><font color="green">and here's where I've been</font></h1>
+    <h1>My name is Mon...<font color="green"> and here's where I've been</font></h1>
 </header>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <main>
     <article>
@@ -20,7 +21,7 @@
 
     <footer>
 			<p>Contact me at <a href=" monicajeonglee@gmail.com">monicajeonglee@gmail.com</a> </p>
-
+            <p>&copy; 2017 Monica</p>
     </footer>
 
 </body>
